[gd_scene load_steps=18 format=3 uid="uid://bo0cwffonwbgn"]

[ext_resource type="Script" path="res://common/character_turn_listener.gd" id="1_cttst"]
[ext_resource type="Script" path="res://summons/skelvin.gd" id="1_fve1f"]
[ext_resource type="Texture2D" uid="uid://co7ave47yxtfx" path="res://summons/skelvin.png" id="1_raki8"]
[ext_resource type="AnimationLibrary" uid="uid://c8p2e6fnke5r8" path="res://common/character_turns.res" id="2_2agrm"]
[ext_resource type="Animation" uid="uid://6bj6lt8u47df" path="res://common/take_damage_animation.res" id="3_0m31u"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://bs7rbmyb11p53" path="res://common/character_animations.tres" id="3_65y5x"]
[ext_resource type="Script" path="res://common/character_movement_controller.gd" id="5_rnxha"]
[ext_resource type="Script" path="res://common/health.gd" id="7_bempt"]
[ext_resource type="PackedScene" uid="uid://dvapfrkrrhhyn" path="res://common/attack_range.tscn" id="8_sf5pn"]
[ext_resource type="PackedScene" uid="uid://j42lyhv85siv" path="res://common/hitbox.tscn" id="8_xw1il"]
[ext_resource type="Script" path="res://common/alignment.gd" id="9_3p48q"]
[ext_resource type="PackedScene" uid="uid://b0dsum4kcwukr" path="res://common/health_bar.tscn" id="10_fedya"]
[ext_resource type="Script" path="res://common/wander_movement.gd" id="11_rmct2"]

[sub_resource type="Animation" id="Animation_yp3mn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite3D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_yc3df"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 2.08165e-12), Vector2(3, 2.08165e-12), Vector2(5, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_1vptp"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxw6r"]
_data = {
"RESET": SubResource("Animation_yp3mn"),
"attack": SubResource("Animation_yc3df"),
"idle": SubResource("Animation_1vptp"),
"take_damage_animation": ExtResource("3_0m31u")
}

[node name="Skelvin" type="Node3D"]
script = ExtResource("1_fve1f")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
pixel_size = 0.0625
billboard = 1
texture_filter = 2
render_priority = 2
texture = ExtResource("1_raki8")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rxw6r"),
"turns": ExtResource("2_2agrm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rxw6r"),
"turns": ExtResource("2_2agrm")
}
tree_root = ExtResource("3_65y5x")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/active = false
parameters/attack/internal_active = false
parameters/attack/request = 0
parameters/take_damage/active = false
parameters/take_damage/internal_active = false
parameters/take_damage/request = 0
parameters/turn_left/active = false
parameters/turn_left/internal_active = false
parameters/turn_left/request = 0
parameters/turn_right/active = false
parameters/turn_right/internal_active = false
parameters/turn_right/request = 0

[node name="CharacterMovementController" type="Node3D" parent="." node_paths=PackedStringArray("animation_tree", "collision_detector")]
script = ExtResource("5_rnxha")
animation_tree = NodePath("../AnimationTree")
collision_detector = NodePath("../CollisionDetector")

[node name="CharacterTurnListener" type="Node" parent="."]
script = ExtResource("1_cttst")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("7_bempt")
max_health = 6
animation_tree = NodePath("../AnimationTree")

[node name="Hitbox" parent="." instance=ExtResource("8_xw1il")]

[node name="AttackRange" parent="." node_paths=PackedStringArray("animator") instance=ExtResource("8_sf5pn")]
animator = NodePath("../AnimationTree")
attack_damage = 3

[node name="Alignment" type="Node" parent="."]
script = ExtResource("9_3p48q")

[node name="HealthBar" parent="." node_paths=PackedStringArray("health") instance=ExtResource("10_fedya")]
health = NodePath("../Health")

[node name="WanderMovement" type="Node" parent="." node_paths=PackedStringArray("movement_controller")]
script = ExtResource("11_rmct2")
movement_controller = NodePath("../CharacterMovementController")

[node name="CollisionDetector" type="RayCast3D" parent="."]
collide_with_areas = true

[connection signal="on_turn" from="CharacterTurnListener" to="." method="_on_character_turn_listener_on_turn"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
